k8s/manifests/dashboard-ingress.yaml
# k8s/manifests/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-dashboard
  namespace: kubernetes-dashboard
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: dashboard.k3s.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-dashboard-kubernetes-dashboard-web
                port:
                  number: 8000
  tls:
    - hosts:
        - dashboard.k3s.local
      secretName: dummy-cert
